service.yml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
spec:
  selector:
    app: <app-selector>
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
